# infobim-core

./: README.md  pyproject.toml
src/infobim/: cli.py  infobim.sh
src/infobim/check/: check.sh  config copy.json  config.json
src/infobim/check/infra/install_python_dependencies/: init.sh
src/infobim/check/infra/is_infobim_set/: init.sh
src/infobim/cli/: __init__.py  init.py
src/infobim/module/ifc/adapter/renderer/: building_list.py  file_list.py  property_set_list.py
src/infobim/module/ifc/plugin/action/: __init__.py  create_extruded_element.py
src/infobim/module/ifc/plugin/capability/: __init__.py  inspect_element.py  list_buildings.py  list_elements.py  list_property_sets.py
src/infobim/module/ifc/util/: element.py  number.py
src/infobim/run/: run.py  run.sh
src/infobim/run/core/strategy/: global_id.py  ifc_class.py  ifc_path.py
