[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "infobim"
authors = [
    { name = "Elias Magalhães", email = "elias@brasidata.com" }
]
version = "0.2.2"
description = "InfoBIM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ifcopenshell",
    "ontobdc>=0.6.9",
]

[project.scripts]
infobim = "infobim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"infobim" = [
    "*.sh",
    "check/*.sh",
    "check/*.json",
    "check/infra/*/*.sh",
    "module/**",
    "run/*.sh",
    "cli/**",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["infobim*"]

